--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,24 +11,22 @@
             align-items: center;
             justify-content: center;
             flex-direction: column;
-            margin: 0px;
+            margin: 0;
             background-color: #000000;
-            padding: 0; /* Garantir que não haja margens extras */
-            height: 100vh; /* Altura total da tela para garantir que a página ocupe a tela inteira */
-            box-sizing: border-box;
+            padding: 0;
+
         }
 
         /* Estilo das imagens */
         img {
-            width: 100%;
-            max-width: 500px; /* Limitar o tamanho máximo das imagens */
-            height: auto; /* Garantir que a altura se ajuste proporcionalmente à largura */
-            margin-bottom: 10px; /* Espaço entre as imagens e o botão */
+            width: 300px;
+            height: 900px;
+          
         }
 
         /* Estilo do botão pulsante */
         .pulsante {
-            padding: 10px 20px;
+            padding: 15px 25px;
             background-color: red;
             color: white;
             border: none;
@@ -36,11 +34,10 @@
             cursor: pointer;
             border-radius: 5px;
             animation: pulsar 1.5s infinite;
-            margin-top: 20px; /* Espaço entre o botão e as imagens */
+            margin-top: 20px;
+            width: 200px; /* Tornar o botão mais flexível */
+            max-width: 450px; /* Limitar o tamanho máximo do botão */
             height: 80px;
-            width: 80%; /* Tornar o botão flexível */
-            max-width: 400px; /* Limitar o tamanho máximo do botão */
-            margin-bottom: 30px;
         }
 
         /* Animação pulsante do botão */
@@ -59,19 +56,16 @@
         /* Estilo do título */
         h1 {
             text-align: center;
-            color: white; /* Tornar o texto legível */
-            margin-top: 20px;
+            color: white;
+            margin: 20px;
+            font-size: 22px;
         }
 
-        /* Estilo do link para que fique alinhado ao botão */
-        a {
-            text-decoration: none;
-        }
-
-        /* Media Query para telas pequenas */
+        /* Media Query para telas pequenas (tablets e dispositivos móveis) */
         @media (max-width: 768px) {
             img {
-                max-width: 100%; /* Imagens vão ocupar toda a largura disponível */
+                width: 90%; /* As imagens ocuparão 90% da largura */
+                max-width: 100%;
             }
 
             .pulsante {
@@ -80,15 +74,15 @@
             }
 
             h1 {
-                font-size: 18px; /* Ajustar o tamanho da fonte do título em telas pequenas */
+                font-size: 18px; /* Reduzir o tamanho da fonte do título */
             }
         }
 
-        /* Media Query para telas ainda menores (como celulares em modo retrato) */
+        /* Media Query para telas muito pequenas (celulares em modo retrato) */
         @media (max-width: 480px) {
             .pulsante {
                 width: 90%; /* O botão vai ocupar 90% da largura da tela */
-                height: 60px; /* Reduzir o tamanho do botão */
+                height: 60px; /* Reduzir ainda mais o tamanho do botão */
                 font-size: 14px; /* Ajustar o tamanho da fonte do botão */
             }
 
@@ -100,6 +94,7 @@
 </head>
 <body>
 
+    <!-- Certifique-se de que o caminho da imagem está correto -->
     <img src="./Imagem do WhatsApp de 2025-03-07 à(s) 01.00.42_dc52b1d0.jpg" alt="Imagem 1">
     <img src="./Imagem do WhatsApp de 2025-03-07 à(s) 01.00.42_5476a1d8.jpg" alt="Imagem 2">
     <img src="./Imagem do WhatsApp de 2025-03-07 à(s) 01.00.42_b39b04c3.jpg" alt="Imagem 3">
