--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
 
         /* Estilo das imagens */
         img {
-            width: 300px;
+            width: 400px;
             height: 900px;
+            margin: 10px;
           
         }
 
@@ -35,9 +36,10 @@
             border-radius: 5px;
             animation: pulsar 1.5s infinite;
             margin-top: 20px;
-            width: 200px; /* Tornar o botão mais flexível */
+            width: 900px; /* Tornar o botão mais flexível */
             max-width: 450px; /* Limitar o tamanho máximo do botão */
             height: 80px;
+            margin-bottom: 90px;
         }
 
         /* Animação pulsante do botão */
